public class AppMobile {
    public void enviarPush(String titulo, String data) {
        System.out.println("App: Notificação push - " + titulo + " (" + data + ")");
    }
}