public class SiteNoticias {
    public void atualizarNoSite(String titulo, String conteudo, String data) {
        System.out.println("Site: <h1>" + titulo + "</h1><p>" + conteudo + "</p><small>" + data + "</small>");
    }
}