@startuml
skinparam classAttributeIconSize 0
class AgenciaNoticias {
  ~ titulo : String
  ~ conteudo : String
  ~ data : String
  ~ site : SiteNoticias
  ~ app : AppMobile
  ~ email : EmailNoticias
  ~ agencia : AgenciaNoticias
  + publicarNoticia(t : String, c : String, d : String) : void
  + main(args : String[]) : void
}
class AppMobile {
  + enviarPush(titulo : String, data : String) : void
}
class EmailNoticias {
  + totalManchetes : int
  - manchetes : String[]
  ~ totalManchetes : return
  + adicionarNaLista(titulo : String, conteudo : String, data : String) : void
  + getTotal() : int
}
class SiteNoticias {
  + atualizarNoSite(titulo : String, conteudo : String, data : String) : void
}
AgenciaNoticias "1" *-- "*" SiteNoticias : site
AgenciaNoticias "1" *-- "*" AppMobile : app
AgenciaNoticias "1" *-- "*" EmailNoticias : email
@enduml